--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,76 +51,39 @@
 
 				<!-- Wrapper -->
 					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/coffee-ratios.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Coffee Ratios</h2>
-										<p>This is a simple page that allows you to get the precise ratio for your coffee.</p>
-										<a href="http://coffee-ratios.surge.sh/" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Personal Projects</h2>
+									<p>Here's a list of the most recent projects I've completed, both as a student at <a href="https://lambdaschool.com/">Lambda School</a> and for my own personal use!</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="http://coffee-ratios.surge.sh/" class="image"><img src="images/coffee-ratios.png"  alt="Snapshot of Coffee Ratios Project" /></a>
+											<h3 class="major">Coffee Ratios</h3>
+											<p>This is a simple page that allows you to get the precise ratio for your coffee.</p>
+											<a href="http://coffee-ratios.surge.sh/" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/stlachman/sweet-eats" class="image"><img src="images/sweet-eats.png" alt="" /></a>
+											<h3 class="major">Sweet Eats</h3>
+											<p>My first project at Lambda School! This is a simple one page bakery website.</p>
+											<a href="https://github.com/stlachman/sweet-eats" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/stlachman/UI-III-Flexbox" class="image"><img src="images/great-idea.jpg" alt="" /></a>
+											<h3 class="major">Great Idea Project</h3>
+											<p>In this project, I used the flexbox module to create the home page as well as a service page.</p>
+											<a href="https://github.com/stlachman/UI-III-Flexbox" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="image"><img src="images/sprint-challenge.png" alt="" /></a>
+											<h3 class="major">Sprint Challenge Project</h3>
+											<p>This was the first sprint challenged I completed at Lambda School!</p>
+											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="https://github.com/stlachman/" class="button">Browse All</a></li>
 									</ul>
 								</div>
 							</section>
