Fixed typo and adjusted description of projects

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,13 +57,13 @@
 										<article>
 											<a href="http://coffee-ratios.surge.sh/" class="image"><img src="images/coffee-ratios.png"  alt="Snapshot of Coffee Ratios Project" /></a>
 											<h3 class="major">Coffee Ratios</h3>
-											<p>This is a simple page that allows you to get the precise ratio for your coffee.</p>
+											<p>This is a simple project that allows a user to get precise ratios before brewing coffee.</p>
 											<a href="http://coffee-ratios.surge.sh/" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="https://github.com/stlachman/sweet-eats" class="image"><img src="images/sweet-eats.png" alt="" /></a>
 											<h3 class="major">Sweet Eats</h3>
-											<p>My first project at Lambda School! This is a simple one page bakery website.</p>
+											<p>My first project at Lambda School! It's the homepage for a sweet bakery!</p>
 											<a href="https://github.com/stlachman/sweet-eats" class="special">Learn more</a>
 										</article>
 										<article>
@@ -75,7 +75,7 @@
 										<article>
 											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="image"><img src="images/sprint-challenge.png" alt="" /></a>
 											<h3 class="major">Sprint Challenge Project</h3>
-											<p>This was the first sprint challenged I completed at Lambda School!</p>
+											<p>This was the first sprint challenge I completed at Lambda School!</p>
 											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="special">Learn more</a>
 										</article>
 									</section>
