--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,27 +55,27 @@
 									<p>Here's a list of the most recent projects I've completed, both as a student at <a href="https://lambdaschool.com/">Lambda School</a> and for my own personal use!</p>
 									<section class="features">
 										<article>
-											<a href="http://coffee-ratios.surge.sh/" class="image"><img src="images/coffee-ratios.png"  alt="Snapshot of Coffee Ratios Project" /></a>
+											<a href="http://coffee-ratios.surge.sh/" class="image"><img src="images/coffee-ratios-cropped.png"  alt="Snapshot of Coffee Ratios Project" /></a>
 											<h3 class="major">Coffee Ratios</h3>
-											<p>This is a simple project that allows a user to get precise ratios before brewing coffee.</p>
+											<p>This is a simple project that I created which allows a user to get precise ratios before brewing their coffee.</p>
 											<a href="http://coffee-ratios.surge.sh/" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/stlachman/sweet-eats" class="image"><img src="images/sweet-eats.png" alt="" /></a>
+											<a href="https://github.com/stlachman/sweet-eats" class="image"><img src="images/sweet-eats-cropped.png" alt="Snapshot of Sweet Eats Bakery" /></a>
 											<h3 class="major">Sweet Eats</h3>
-											<p>My first project at Lambda School! It's the homepage for a sweet bakery!</p>
+											<p>My first project at Lambda School! It's the homepage for a sweet bakery! This project helped us learn the basics of semantic HTML and clean CSS.</p>
 											<a href="https://github.com/stlachman/sweet-eats" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/stlachman/UI-III-Flexbox" class="image"><img src="images/great-idea.jpg" alt="" /></a>
+											<a href="https://github.com/stlachman/UI-III-Flexbox" class="image"><img src="images/great-idea-cropped.png" alt="Snapshot of Great Idea Project" /></a>
 											<h3 class="major">Great Idea Project</h3>
-											<p>In this project, I used the flexbox module to create the home page as well as a service page.</p>
+											<p>In this project, I used the flexbox module to create the home page as well as a service page. I also added responsive styling to the service page.</p>
 											<a href="https://github.com/stlachman/UI-III-Flexbox" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="image"><img src="images/sprint-challenge.png" alt="" /></a>
+											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="image"><img src="images/sprint-challenge-cropped.png" alt="Snapshot of Sprint Challenge project" /></a>
 											<h3 class="major">Sprint Challenge Project</h3>
-											<p>This was the first sprint challenge I completed at Lambda School!</p>
+											<p>This was the first sprint challenge I completed at Lambda School! I implemented a page based on a design mockup and I also added a custom contact page with a styled form.</p>
 											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="special">Learn more</a>
 										</article>
 									</section>
