Added codepen link to social media section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -91,10 +91,11 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>I'm most active on Twitter and Github.</p>
+							<p>These are the social media outlets where you're most likely to find new content from me.</p>
 							<ul class="contact">
 								<li class="fa-twitter"><a href="https://twitter.com/SethLachman">https://twitter.com/SethLachman</a></li>
 								<li class="fa-github"><a href="https://github.com/stlachman/">https://github.com/stlachman/</a></li>
+								<li class="fa-codepen"><a href="https://codepen.io/slach/">https://codepen.io/slach/</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
