Added NBA career project and image to portfolio page.

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 									<h2 class="major">Personal Projects</h2>
 									<p>Here's a list of the most recent projects I've completed, both as a student at <a href="https://lambdaschool.com/">Lambda School</a> and for my own personal use!</p>
 									<section class="features">
+                    <article>
+                      <a href="https://nbacareerlength.netlify.com" class="image"><img src="images/nba-career-predictor-snapshot.jpg"  alt="Snapshot of NBA Career Predictor" /></a>
+                      <h3 class="major">Coffee Ratios</h3>
+                      <p>My first build week project from Lambda School! The application attempts to predict the career lifespan of NBA players.</p>
+                      <a href="https://nbacareerlength.netlify.com" class="special">Learn more</a>
+                    </article>
 										<article>
 											<a href="http://coffee-ratios.surge.sh/" class="image"><img src="images/coffee-ratios-cropped.png"  alt="Snapshot of Coffee Ratios Project" /></a>
 											<h3 class="major">Coffee Ratios</h3>
 											<p>This is a simple project that I created which allows a user to get precise ratios before brewing their coffee.</p>
 											<a href="http://coffee-ratios.surge.sh/" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="https://github.com/stlachman/sweet-eats" class="image"><img src="images/sweet-eats-cropped.png" alt="Snapshot of Sweet Eats Bakery" /></a>
-											<h3 class="major">Sweet Eats</h3>
-											<p>My first project at Lambda School! It's the homepage for a sweet bakery! This project helped us learn the basics of semantic HTML and clean CSS.</p>
-											<a href="https://github.com/stlachman/sweet-eats" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="https://github.com/stlachman/UI-III-Flexbox" class="image"><img src="images/great-idea-cropped.png" alt="Snapshot of Great Idea Project" /></a>
