--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<section class="features">
                     <article>
                       <a href="https://nbacareerlength.netlify.com" class="image"><img src="images/nba-career-predictor-snapshot.jpg"  alt="Snapshot of NBA Career Predictor" /></a>
-                      <h3 class="major">Coffee Ratios</h3>
+                      <h3 class="major">NBA Career Predictor</h3>
                       <p>My first build week project from Lambda School! The application attempts to predict the career lifespan of NBA players.</p>
                       <a href="https://nbacareerlength.netlify.com" class="special">Learn more</a>
                     </article>
