Added most recent build week project.

--- a/index.html
+++ b/index.html
@@ -1,117 +1,179 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Solid State by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Seth Lachman</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Seth Lachman</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Page Wrapper -->
+    <div id="page-wrapper">
+      <!-- Header -->
+      <header id="header" class="alt">
+        <h1><a href="index.html">Seth Lachman</a></h1>
+        <nav>
+          <a href="#menu">Menu</a>
+        </nav>
+      </header>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+      <!-- Menu -->
+      <nav id="menu">
+        <div class="inner">
+          <h2>Menu</h2>
+          <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#wrapper">Projects</a></li>
+          </ul>
+          <a href="#" class="close">Close</a>
+        </div>
+      </nav>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Seth Lachman</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+      <!-- Banner -->
+      <section id="banner">
+        <div class="inner">
+          <div class="logo"><span class="icon fa-diamond"></span></div>
+          <h2>Seth Lachman</h2>
+          <p>Hi, I'm a full stack web developer!</p>
+        </div>
+      </section>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#wrapper">Projects</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
+      <!-- Wrapper -->
+      <section id="wrapper">
+        <!-- Four -->
+        <section id="four" class="wrapper alt style1">
+          <div class="inner">
+            <h2 class="major">Projects</h2>
+            <p>
+              Here's a list of the most recent projects I've completed, both as
+              a student at
+              <a href="https://lambdaschool.com/">Lambda School</a> and for my
+              own personal use!
+            </p>
+            <section class="features">
+              <article>
+                <a href="https://macro-calculator.netlify.com/" class="image"
+                  ><img
+                    src="/images/macro-calc-portfolio.jpg"
+                    alt="Snapshot of Macro Calculator"
+                /></a>
+                <h3 class="major">Macro Calculator</h3>
+                <p>
+                  My second build week project from Lambda School! The
+                  application creates macro formulas based on user input.
+                </p>
+                <a href="https://macro-calculator.netlify.com/" class="special"
+                  >Learn more</a
+                >
+              </article>
+              <article>
+                <a href="https://nbacareerlength.netlify.com" class="image"
+                  ><img
+                    src="images/nba-career-predictor-snapshot.jpg"
+                    alt="Snapshot of NBA Career Predictor"
+                /></a>
+                <h3 class="major">NBA Career Predictor</h3>
+                <p>
+                  My first build week project from Lambda School! The
+                  application attempts to predict the career lifespan of NBA
+                  players.
+                </p>
+                <a href="https://nbacareerlength.netlify.com" class="special"
+                  >Learn more</a
+                >
+              </article>
+              <article>
+                <a href="http://coffee-ratios.surge.sh/" class="image"
+                  ><img
+                    src="images/coffee-ratios-cropped.png"
+                    alt="Snapshot of Coffee Ratios Project"
+                /></a>
+                <h3 class="major">Coffee Ratios</h3>
+                <p>
+                  This is a simple project that I created which allows a user to
+                  get precise ratios before brewing their coffee.
+                </p>
+                <a href="http://coffee-ratios.surge.sh/" class="special"
+                  >Learn more</a
+                >
+              </article>
+              <article>
+                <a
+                  href="https://github.com/stlachman/UI-III-Flexbox"
+                  class="image"
+                  ><img
+                    src="images/great-idea-cropped.png"
+                    alt="Snapshot of Great Idea Project"
+                /></a>
+                <h3 class="major">Great Idea Project</h3>
+                <p>
+                  In this project, I used the flexbox module to create the home
+                  page as well as a service page. I also added responsive
+                  styling to the service page.
+                </p>
+                <a
+                  href="https://github.com/stlachman/UI-III-Flexbox"
+                  class="special"
+                  >Learn more</a
+                >
+              </article>
+            </section>
+            <ul class="actions">
+              <li>
+                <a href="https://github.com/stlachman/" class="button"
+                  >Browse All</a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
+      </section>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon fa-diamond"></span></div>
-							<h2>Seth Lachman</h2>
-							<p>Hi, I'm a full stack web developer!</p>
-						</div>
-					</section>
+      <!-- Footer -->
+      <section id="footer">
+        <div class="inner">
+          <h2 class="major">Get in touch</h2>
+          <p>
+            These are the social media outlets where you're most likely to find
+            new content from me.
+          </p>
+          <ul class="contact">
+            <li class="fa-twitter">
+              <a href="https://twitter.com/SethLachman"
+                >https://twitter.com/SethLachman</a
+              >
+            </li>
+            <li class="fa-github">
+              <a href="https://github.com/stlachman/"
+                >https://github.com/stlachman/</a
+              >
+            </li>
+            <li class="fa-codepen">
+              <a href="https://codepen.io/slach/">https://codepen.io/slach/</a>
+            </li>
+          </ul>
+          <ul class="copyright">
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
+        </div>
+      </section>
+    </div>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Personal Projects</h2>
-									<p>Here's a list of the most recent projects I've completed, both as a student at <a href="https://lambdaschool.com/">Lambda School</a> and for my own personal use!</p>
-									<section class="features">
-                    <article>
-                      <a href="https://nbacareerlength.netlify.com" class="image"><img src="images/nba-career-predictor-snapshot.jpg"  alt="Snapshot of NBA Career Predictor" /></a>
-                      <h3 class="major">NBA Career Predictor</h3>
-                      <p>My first build week project from Lambda School! The application attempts to predict the career lifespan of NBA players.</p>
-                      <a href="https://nbacareerlength.netlify.com" class="special">Learn more</a>
-                    </article>
-										<article>
-											<a href="http://coffee-ratios.surge.sh/" class="image"><img src="images/coffee-ratios-cropped.png"  alt="Snapshot of Coffee Ratios Project" /></a>
-											<h3 class="major">Coffee Ratios</h3>
-											<p>This is a simple project that I created which allows a user to get precise ratios before brewing their coffee.</p>
-											<a href="http://coffee-ratios.surge.sh/" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="https://github.com/stlachman/UI-III-Flexbox" class="image"><img src="images/great-idea-cropped.png" alt="Snapshot of Great Idea Project" /></a>
-											<h3 class="major">Great Idea Project</h3>
-											<p>In this project, I used the flexbox module to create the home page as well as a service page. I also added responsive styling to the service page.</p>
-											<a href="https://github.com/stlachman/UI-III-Flexbox" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="image"><img src="images/sprint-challenge-cropped.png" alt="Snapshot of Sprint Challenge project" /></a>
-											<h3 class="major">Sprint Challenge Project</h3>
-											<p>This was the first sprint challenge I completed at Lambda School! I implemented a page based on a design mockup and I also added a custom contact page with a styled form.</p>
-											<a href="https://github.com/stlachman/Sprint-Challenge--User-Interface" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="https://github.com/stlachman/" class="button">Browse All</a></li>
-									</ul>
-								</div>
-							</section>
-
-					</section>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>These are the social media outlets where you're most likely to find new content from me.</p>
-							<ul class="contact">
-								<li class="fa-twitter"><a href="https://twitter.com/SethLachman">https://twitter.com/SethLachman</a></li>
-								<li class="fa-github"><a href="https://github.com/stlachman/">https://github.com/stlachman/</a></li>
-								<li class="fa-codepen"><a href="https://codepen.io/slach/">https://codepen.io/slach/</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
